--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "firebase": "^4.6.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.16"
